--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,10 @@
      crossorigin=""/>
   </head>
   <body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
